--- a/contact/index.html
+++ b/contact/index.html
@@ -41,12 +41,16 @@
     form button:hover{background:#fff;color:#000;}
 
     /* SOCIAL ICONS */
-    .social-icons{display:flex;justify-content:center;gap:20px;margin-top:20px;}
-    .social-icons a img{width:40px;height:40px;transition:0.3s, box-shadow 0.3s;}
-    .social-icons a.youtube:hover img{box-shadow: 0 0 15px #FF0000; transform: scale(1.1);}
-    .social-icons a.spotify:hover img{box-shadow: 0 0 15px #1DB954; transform: scale(1.1);}
-    .social-icons a.twitter:hover img{box-shadow: 0 0 15px #1DA1F2; transform: scale(1.1);}
-    .social-icons a.instagram:hover img{box-shadow: 0 0 15px #F58529, 0 0 25px #DD2A7B, 0 0 35px #8134AF; transform: scale(1.1);}
+    .social-icons{display:flex;justify-content:center;gap:25px;margin-top:20px;}
+    .social-icons a{display:inline-block;transition:0.3s;}
+    .social-icons img{width:50px;height:50px;transition:0.3s;}
+    /* Hover glow by brand */
+    .social-icons a.youtube:hover img{box-shadow:0 0 15px #FF0000; transform: scale(1.1);}
+    .social-icons a.instagram:hover img{box-shadow:0 0 15px #C13584, 0 0 25px #F56040, 0 0 35px #FCAF45; transform: scale(1.1);}
+    .social-icons a.facebook:hover img{box-shadow:0 0 15px #1877F2; transform: scale(1.1);}
+    .social-icons a.x:hover img{box-shadow:0 0 15px #1DA1F2; transform: scale(1.1);}
+    .social-icons a.whatsapp:hover img{box-shadow:0 0 15px #25D366; transform: scale(1.1);}
+    .social-icons a.email:hover img{box-shadow:0 0 15px #fff; transform: scale(1.1);}
 
     /* FOOTER */
     footer{background:#000;padding:20px;text-align:center;font-size:0.9rem;color:#ccc;}
@@ -58,7 +62,7 @@
       .section-subtitle{font-size:1.2rem;}
       .nav-btn{font-size:0.8rem;padding:5px 8px;}
       .logo{font-size:2rem;}
-      .social-icons a img{width:30px;height:30px;}
+      .social-icons img{width:35px;height:35px;}
     }
   </style>
 </head>
@@ -85,7 +89,7 @@
   <p class="section-text">Have questions, suggestions, or want to collaborate? Reach out to us via email or through our social channels below:</p>
 
   <!-- Email -->
-  <p class="section-text"><strong>Email:</strong> <a href="mailto:Contact@tribletunes.com" style="color:#fff;text-decoration:underline;">Contact@tribletunes.com</a></p>
+  <p class="section-text"><strong>Email:</strong> <a href="mailto:contact@tribletunes.com" style="color:#fff;text-decoration:underline;">contact@tribletunes.com</a></p>
 
   <!-- Contact Form -->
   <form action="https://formspree.io/f/xzzjejde" method="POST">
@@ -97,17 +101,23 @@
 
   <!-- Social Icons -->
   <div class="social-icons">
-    <a class="youtube" href="https://www.youtube.com/@Tribletunes" target="_blank">
+    <a class="youtube" href="https://www.youtube.com/@TribleTunes" target="_blank">
       <img src="https://upload.wikimedia.org/wikipedia/commons/9/9f/Youtube_Logo_2017.png" alt="YouTube">
     </a>
-    <a class="spotify" href="https://open.spotify.com/artist/2cR2Yz2b6cdPNHbjTnNsVy" target="_blank">
-      <img src="https://upload.wikimedia.org/wikipedia/commons/2/26/Spotify_logo_with_text.svg" alt="Spotify">
-    </a>
-    <a class="twitter" href="https://twitter.com/TribleTunes" target="_blank">
-      <img src="https://upload.wikimedia.org/wikipedia/en/6/60/Twitter_Logo_as_of_2021.svg" alt="Twitter">
-    </a>
-    <a class="instagram" href="https://instagram.com/TribleTunes" target="_blank">
+    <a class="instagram" href="https://instagram.com/TribleTune" target="_blank">
       <img src="https://upload.wikimedia.org/wikipedia/commons/a/a5/Instagram_icon.png" alt="Instagram">
+    </a>
+    <a class="facebook" href="https://facebook.com/TribleTunes" target="_blank">
+      <img src="https://upload.wikimedia.org/wikipedia/commons/0/05/Facebook_Logo_%282019%29.png" alt="Facebook">
+    </a>
+    <a class="x" href="https://x.com/TribleTunes" target="_blank">
+      <img src="https://upload.wikimedia.org/wikipedia/commons/2/2f/X_logo_2023.svg" alt="X">
+    </a>
+    <a class="whatsapp" href="https://whatsapp.com/channel/0029Vb6g16B8kyyWIkgqcq3l" target="_blank">
+      <img src="https://upload.wikimedia.org/wikipedia/commons/6/6b/WhatsApp.svg" alt="WhatsApp">
+    </a>
+    <a class="email" href="mailto:contact@tribletunes.com" target="_blank">
+      <img src="https://upload.wikimedia.org/wikipedia/commons/4/4e/Mail_%28iOS%29.svg" alt="Email">
     </a>
   </div>
 </section>
@@ -116,9 +126,9 @@
 <footer>
   <p>&copy; 2025 TribleTunes. All rights reserved.</p>
   <p>
-    <a href="https://www.youtube.com/@Tribletunes" target="_blank">YouTube</a> |
+    <a href="https://www.youtube.com/@TribleTunes" target="_blank">YouTube</a> |
     <a href="https://open.spotify.com/artist/2cR2Yz2b6cdPNHbjTnNsVy" target="_blank">Spotify</a> |
-    <a href="mailto:Contact@tribletunes.com">Email</a>
+    <a href="mailto:contact@tribletunes.com">Email</a>
   </p>
 </footer>
 
