--- a/submission/index.html
+++ b/submission/index.html
@@ -16,9 +16,12 @@
 <script src='https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js' nomodule></script>
 
 <style>
+/* RESET & BASE */
 *{margin:0;padding:0;box-sizing:border-box;}
 html{scroll-behavior:smooth;}
 body{font-family:'Poppins',sans-serif;color:#fff;background:#0d0d0d;overflow-x:hidden;line-height:1.6;text-align:center;}
+
+/* HEADER */
 header{padding:15px 20px;display:flex;flex-direction:column;align-items:center;background:#000;box-shadow:0 2px 10px rgba(0,0,0,0.5);}
 .header-logo{margin-bottom:10px;}
 .logo{font-family:'Dancing Script',cursive;font-size:2.2rem;color:#fff;text-align:center;}
@@ -27,22 +30,53 @@ header{padding:15px 20px;display:flex;flex-direction:column;align-items:center;b
 .nav-btn:hover{background:#fff;color:#000;transform:scale(1.1);}
 .header-nav::-webkit-scrollbar{display:none;}
 .header-nav{-ms-overflow-style:none;scrollbar-width:none;}
+
+/* SECTIONS */
 section{padding:60px 20px;max-width:1000px;margin:auto;opacity:0;transform:translateY(20px);transition:0.8s ease;}
 section.visible{opacity:1;transform:translateY(0);}
 .section-title{font-family:'Dancing Script',cursive;font-size:2rem;margin-bottom:10px;}
 .section-subtitle{font-size:1.5rem;font-weight:600;margin-bottom:20px;}
 .section-text{font-size:1rem;margin-bottom:20px;}
+
+/* FORM CARD */
+.form-card{background:#111;padding:25px;border-radius:10px;box-shadow:0 6px 20px rgba(0,0,0,0.5);transition:0.3s;}
+.form-card:hover{box-shadow:0 10px 25px rgba(0,0,0,0.7);}
+form input, form textarea, form button{width:100%;margin-bottom:15px;border-radius:5px;font-size:1rem;outline:none;transition:0.3s;}
+form input, form textarea{padding:12px 15px;border:2px solid #fff;background:transparent;color:#fff; position:relative;}
+form input:focus, form textarea:focus{border-color:#00ffd4;box-shadow:0 0 10px #00ffd4;}
+form button{padding:12px;font-weight:600;border:2px solid #fff;background:none;color:#fff;cursor:pointer;}
+form button:hover{background:#fff;color:#000;transform:scale(1.05);}
+
+/* TRACK LINK INPUT ICONS */
+.input-icon-wrapper{position:relative;}
+.input-icon-wrapper input{padding-left:40px;}
+.input-icon-wrapper img{position:absolute;top:50%;left:10px;transform:translateY(-50%);width:20px;height:20px;transition:transform 0.3s;}
+.input-icon-wrapper img:hover{transform:translateY(-50%) scale(1.2);}
+
+/* PAID SUBMISSION */
 .paid-card{background:linear-gradient(135deg,#ff6a00,#ffcc00);padding:25px;border-radius:10px;margin:30px 0;transition:0.3s;cursor:pointer;}
 .paid-card:hover{transform:scale(1.05);box-shadow:0 8px 25px rgba(255,204,0,0.7);}
 .paid-card a{color:#000;font-weight:700;text-decoration:none;font-size:1.1rem;display:block;margin-top:10px;}
+
+/* UNDER CONSTRUCTION */
 .under-card{background:#444;padding:25px;border-radius:10px;margin:30px 0;position:relative;opacity:0.8;}
 .under-card-text{margin-bottom:10px;font-size:1rem;color:#fff;}
 .under-card::after{content:'⚠️ Under Construction ⚠️';position:absolute;top:50%;left:50%;transform:translate(-50%,-50%);font-size:1.2rem;color:#fff;animation:pulse 1.5s infinite;}
 @keyframes pulse{0%,100%{opacity:0.6;}50%{opacity:1;}}
+
+/* FOOTER */
 footer{background:#000;padding:20px;text-align:center;font-size:0.9rem;color:#ccc;}
 footer a{color:#fff;text-decoration:none;margin:0 8px;}
 footer a:hover{text-decoration:underline;}
-@media(max-width:600px){.section-title{font-size:1.5rem;}.section-subtitle{font-size:1.2rem;}.nav-btn{font-size:0.8rem;padding:5px 8px;}.logo{font-size:2rem;}}
+
+/* RESPONSIVE */
+@media(max-width:600px){
+  .section-title{font-size:1.5rem;}
+  .section-subtitle{font-size:1.2rem;}
+  .nav-btn{font-size:0.8rem;padding:5px 8px;}
+  .logo{font-size:2rem;}
+  .input-icon-wrapper img{width:18px;height:18px;}
+}
 </style>
 </head>
 <body>
@@ -62,18 +96,36 @@ footer a:hover{text-decoration:underline;}
 <section id="intro" class="visible">
   <h2 class="section-title">Submit Your Track</h2>
   <h3 class="section-subtitle">For Lyric Video Creation</h3>
-  <p class="section-text">Submit your track below for a chance to get a professionally made lyric video. Only tracks for lyric video submission are accepted here.</p>
+  <p class="section-text">Submit your track by sharing its Spotify or SoundCloud link. Only tracks intended for lyric video creation are accepted.</p>
 </section>
 
-<!-- TRACK SUBMISSION FORM (DriveUploader) -->
+<!-- TRACK SUBMISSION FORM -->
 <section id="track-submission" class="visible">
-  <iframe src="https://driveuploader.com/upload/KR4iTg6XNQ/embed/" width="100%" height="600" frameborder="0"></iframe>
+  <div class="form-card">
+    <form action="https://formspree.io/f/xzzjejde" method="POST">
+      <input type="text" name="name" placeholder="Your Name" required>
+      <input type="email" name="email" placeholder="Your Email" required>
+      <input type="text" name="track" placeholder="Track Title" required>
+      <div class="input-icon-wrapper">
+        <input type="url" name="tracklink" placeholder="Spotify / SoundCloud Track Link" required>
+        <img src="https://upload.wikimedia.org/wikipedia/commons/1/19/Spotify_logo_without_text.svg" alt="Spotify">
+        <img src="https://ik.imagekit.io/h2tos5anh/soundcloud-svgrepo-com.svg" alt="SoundCloud" style="left:35px;">
+      </div>
+      <button type="submit">Submit Track</button>
+    </form>
+  </div>
 </section>
 
 <!-- PAID SUBMISSION -->
 <section id="paid-submission" class="visible">
   <h2 class="section-title">Paid Submission for Wider Reach</h2>
-  <p class="section-text">Promote your track with TribleTunes! Get your lyric video boosted through ads, reach more listeners, and grow your audience.</p>
+  <p class="section-text">Promote your track with TribleTunes! Your lyric video will be boosted via ads, reaching more listeners and growing your audience. Paid submission includes:</p>
+  <ul style="text-align:left; max-width:500px; margin:auto; margin-bottom:20px;">
+    <li>Priority creation of lyric video</li>
+    <li>Promotion through YouTube & Ads</li>
+    <li>Feature in TribleTunes playlists</li>
+    <li>Wider audience reach</li>
+  </ul>
   <div class="paid-card">
     <a href="https://app.one-submit.com/direct-submit/27237/2377/5549/TribleTunes-youtube-Music-Promotion" target="_blank">
       Submit for Paid Promotion & Wider Reach
@@ -84,10 +136,8 @@ footer a:hover{text-decoration:underline;}
 <!-- RELEASE SUBMISSION UNDER CONSTRUCTION -->
 <section id="release-submission" class="visible">
   <h2 class="section-title">Official Track Release</h2>
-  <p class="section-text">This section will allow artists to submit tracks for official release and distribution. Coming soon!</p>
-  <div class="under-card">
-    <div class="under-card-text"></div>
-  </div>
+  <p class="section-text">Submitting your track for official release is not available yet. Stay tuned!</p>
+  <div class="under-card"></div>
 </section>
 
 <!-- FOOTER -->
@@ -96,20 +146,4 @@ footer a:hover{text-decoration:underline;}
   <p>
     <a href="https://www.youtube.com/@Tribletunes" target="_blank">YouTube</a> |
     <a href="https://open.spotify.com/artist/2cR2Yz2b6cdPNHbjTnNsVy?si=-n6YThoqTQKGvBadgYck5w" target="_blank">Spotify</a> |
-    <a href="mailto:contact@tribletunes.com" target="_blank">Email</a>
-  </p>
-</footer>
-
-<!-- SCRIPTS -->
-<script>
-const sections = document.querySelectorAll('section');
-window.addEventListener('scroll', () => {
-  sections.forEach(sec => {
-    const top = sec.getBoundingClientRect().top;
-    if(top < window.innerHeight - 100){ sec.classList.add('visible'); }
-  });
-});
-</script>
-
-</body>
-</html>
+    <a href="mailto:contact@tribletunes.com" target="_
