--- a/submission/index.html
+++ b/submission/index.html
@@ -146,6 +146,12 @@ footer a:hover{text-decoration:underline;}
 <footer>
   <p>&copy; 2025 TribleTunes. All rights reserved.</p>
   <p>
-    <a href="https://www.youtube.com/@Tribletunes" target="_blank">YouTube</a> |
-    <a href="https://open.spotify.com/artist/2cR2Yz2b6cdPNHbjTnNsVy?si=-n6YThoqTQKGvBadgYck5w" target="_blank">Spotify</a> |
-    <a href="mailto:contact@tribletunes.com" target="_
+    <a href="https://tribletunes.com/">Home</a> |
+    <a href="https://tribletunes.com/about/">About Us</a> |
+    <a href="https://tribletunes.com/contact/">Contact</a> |
+    <a href="https://tribletunes.com/submission/">Submission</a> |
+    <a href="https://www.youtube.com/@TribleTunes" target="_blank">YouTube</a> |
+    <a href="https://open.spotify.com/artist/2cR2Yz2b6cdPNHbjTnNsVy" target="_blank">Spotify</a> |
+    <a href="mailto:contact@tribletunes.com">Email</a>
+  </p>
+</footer>
