--- a/index.html
+++ b/index.html
@@ -206,12 +206,15 @@
 <footer>
   <p>&copy; 2025 TribleTunes. All rights reserved.</p>
   <p>
-    <a href="https://www.youtube.com/@Tribletunes" target="_blank">YouTube</a> |
-    <a href="https://open.spotify.com/artist/2cR2Yz2b6cdPNHbjTnNsVy?si=-n6YThoqTQKGvBadgYck5w" target="_blank">Spotify</a> |
-    <a href="https://mail.google.com/mail/?view=cm&fs=1&to=contact@tribletunes.com" target="_blank">Contact</a>
+    <a href="https://tribletunes.com/">Home</a> |
+    <a href="https://tribletunes.com/about/">About Us</a> |
+    <a href="https://tribletunes.com/contact/">Contact</a> |
+    <a href="https://tribletunes.com/submission/">Submission</a> |
+    <a href="https://www.youtube.com/@TribleTunes" target="_blank">YouTube</a> |
+    <a href="https://open.spotify.com/artist/2cR2Yz2b6cdPNHbjTnNsVy" target="_blank">Spotify</a> |
+    <a href="mailto:contact@tribletunes.com">Email</a>
   </p>
 </footer>
-
 <!-- SCRIPTS -->
 <script>
   // Smooth scroll
