--- a/index.html
+++ b/index.html
@@ -117,26 +117,39 @@
   <div class="carousel">
     <button class="arrow left" onclick="moveSlide('release', -1)">&#10094;</button>
     <div class="carousel-track" id="release-track">
+      
+      <!-- Existing Item -->
       <div class="carousel-item">
         <img src="https://ik.imagekit.io/lbmgfujrk/UniversalUpscaler_72c34279-7ddf-49c9-b18c-55a49137c2f5.jpg?updatedAt=1759111477554" alt="Back To You">
         <h3>Back To You</h3>
         <a href="https://open.spotify.com/track/54y4vQHTHW5RILsuxVgLOM?si=xvEmQiX_TLqGbNPU8UrGrQ" class="btn" target="_blank">Listen Now</a>
       </div>
+
+      <!-- Existing Item -->
       <div class="carousel-item">
         <img src="https://ik.imagekit.io/lbmgfujrk/20250919_121021.png?updatedAt=1759111510391" alt="FUMAÇA E LUZ">
         <h3>FUMAÇA E LUZ</h3>
         <a href="https://open.spotify.com/track/0AmiHSdu7zDClPlmpUrYWn?si=DWViHgvuTFCq0feFLIOimg" class="btn" target="_blank">Listen Now</a>
       </div>
+
+      <!-- Existing Item -->
       <div class="carousel-item">
         <img src="https://ik.imagekit.io/lbmgfujrk/20250827_094940.jpg" alt="808x">
         <h3>808x</h3>
         <a href="https://open.spotify.com/album/4XFxPNCPMYQrDLs7fh39zP?si=5KFOWyMyQa2X-9NJIcIwtA" class="btn" target="_blank">Listen Now</a>
       </div>
+
+      <!-- ✅ New Song Added -->
+      <div class="carousel-item">
+        <img src="https://ik.imagekit.io/h2tos5anh/Untitled%20design_20251001_075216_0000.jpg" alt="New Release">
+        <h3>MONTAGEM SOMBRIA</h3>
+        <a href="https://open.spotify.com/track/1EqYzOHriGvfHfHeYvZACJ?si=p2LOD7O3SyK5Mqvi0bd1jw" class="btn" target="_blank">Listen Now</a>
+      </div>
+
     </div>
     <button class="arrow right" onclick="moveSlide('release', 1)">&#10095;</button>
   </div>
 </section>
-
 <!-- YOUTUBE -->
 <section id="youtube">
   <h2 class="section-title">YouTube Uploads</h2>
