--- a/submission/index.html
+++ b/submission/index.html
@@ -19,32 +19,31 @@
 /* RESET & BASE */
 *{margin:0;padding:0;box-sizing:border-box;}
 html{scroll-behavior:smooth;}
-body{font-family:'Poppins',sans-serif;color:#fff;background:#0d0d0d;overflow-x:hidden;line-height:1.6;text-align:center;}
+body{font-family:'Poppins',sans-serif;color:#fff;background:#0d0d0d;overflow-x:hidden;line-height:1.5;text-align:center;}
 
 /* HEADER */
 header{padding:15px 20px;display:flex;flex-direction:column;align-items:center;background:#000;box-shadow:0 2px 10px rgba(0,0,0,0.5);}
 .header-logo{margin-bottom:10px;}
 .logo{font-family:'Dancing Script',cursive;font-size:2.2rem;color:#fff;text-align:center;}
-.header-nav{display:flex;gap:10px;overflow-x:auto;-webkit-overflow-scrolling:touch;flex-wrap:nowrap;justify-content:center;}
+.header-nav{display:flex;gap:10px;overflow-x:auto;-webkit-overflow-scrolling:touch;flex-wrap:nowrap;justify-content:center;-ms-overflow-style:none;scrollbar-width:none;}
 .nav-btn{padding:6px 10px;border:2px solid #fff;border-radius:5px;background:none;color:#fff;font-weight:600;cursor:pointer;white-space:nowrap;flex:0 0 auto;transition:0.3s, transform 0.3s;}
 .nav-btn:hover{background:#fff;color:#000;transform:scale(1.1);}
 .header-nav::-webkit-scrollbar{display:none;}
-.header-nav{-ms-overflow-style:none;scrollbar-width:none;}
 
-/* SECTIONS */
-section{padding:60px 20px;max-width:1000px;margin:auto;opacity:0;transform:translateY(20px);transition:0.8s ease;}
+/* SECTIONS - compact */
+section{padding:30px 20px;max-width:1000px;margin:auto;opacity:0;transform:translateY(20px);transition:0.8s ease;}
 section.visible{opacity:1;transform:translateY(0);}
-.section-title{font-family:'Dancing Script',cursive;font-size:2rem;margin-bottom:10px;}
-.section-subtitle{font-size:1.5rem;font-weight:600;margin-bottom:20px;}
-.section-text{font-size:1rem;margin-bottom:20px;}
+.section-title{font-family:'Dancing Script',cursive;font-size:2.2rem;margin-bottom:5px;}
+.section-subtitle{font-size:1.5rem;font-weight:600;margin-bottom:10px;}
+.section-text{font-size:1rem;margin-bottom:10px;}
 
 /* FORM CARD */
-.form-card{background:#111;padding:25px;border-radius:10px;box-shadow:0 6px 20px rgba(0,0,0,0.5);transition:0.3s;}
+.form-card{background:#111;padding:20px;border-radius:10px;box-shadow:0 6px 20px rgba(0,0,0,0.5);transition:0.3s;}
 .form-card:hover{box-shadow:0 10px 25px rgba(0,0,0,0.7);}
-form input, form textarea, form button{width:100%;margin-bottom:15px;border-radius:5px;font-size:1rem;outline:none;transition:0.3s;}
-form input, form textarea{padding:12px 15px;border:2px solid #fff;background:transparent;color:#fff; position:relative;}
-form input:focus, form textarea:focus{border-color:#00ffd4;box-shadow:0 0 10px #00ffd4;}
-form button{padding:12px;font-weight:600;border:2px solid #fff;background:none;color:#fff;cursor:pointer;}
+form input, form textarea, form button{width:100%;margin-bottom:10px;border-radius:5px;font-size:1rem;outline:none;transition:0.3s;}
+form input, form textarea{padding:10px 12px;border:2px solid #fff;background:transparent;color:#fff; position:relative;}
+form input:focus, form textarea:focus{border-color:#00ffd4;box-shadow:0 0 8px #00ffd4;}
+form button{padding:10px;font-weight:600;border:2px solid #fff;background:none;color:#fff;cursor:pointer;}
 form button:hover{background:#fff;color:#000;transform:scale(1.05);}
 
 /* TRACK LINK INPUT ICONS */
@@ -52,17 +51,42 @@ form button:hover{background:#fff;color:#000;transform:scale(1.05);}
 .input-icon-wrapper input{padding-left:40px;}
 .input-icon-wrapper img{position:absolute;top:50%;left:10px;transform:translateY(-50%);width:20px;height:20px;transition:transform 0.3s;}
 .input-icon-wrapper img:hover{transform:translateY(-50%) scale(1.2);}
+.input-icon-wrapper img:nth-child(2){left:35px;}
 
-/* PAID SUBMISSION */
-.paid-card{background:linear-gradient(135deg,#ff6a00,#ffcc00);padding:25px;border-radius:10px;margin:30px 0;transition:0.3s;cursor:pointer;}
-.paid-card:hover{transform:scale(1.05);box-shadow:0 8px 25px rgba(255,204,0,0.7);}
-.paid-card a{color:#000;font-weight:700;text-decoration:none;font-size:1.1rem;display:block;margin-top:10px;}
+/* PAID SUBMISSION BUTTON - compact B&W */
+.paid-card {
+  background:#000;
+  padding:12px 25px;
+  border-radius:8px;
+  margin:20px auto;
+  text-align:center;
+  display:inline-block;
+  transition:0.3s;
+  cursor:pointer;
+  border:2px solid #fff;
+  font-weight:700;
+}
+.paid-card:hover { background:#fff; }
+.paid-card a { color:#fff; text-decoration:none; font-size:1rem; }
+.paid-card:hover a { color:#000; }
 
-/* UNDER CONSTRUCTION */
-.under-card{background:#444;padding:25px;border-radius:10px;margin:30px 0;position:relative;opacity:0.8;}
-.under-card-text{margin-bottom:10px;font-size:1rem;color:#fff;}
-.under-card::after{content:'⚠️ Under Construction ⚠️';position:absolute;top:50%;left:50%;transform:translate(-50%,-50%);font-size:1.2rem;color:#fff;animation:pulse 1.5s infinite;}
-@keyframes pulse{0%,100%{opacity:0.6;}50%{opacity:1;}}
+/* UNDER CONSTRUCTION - compact */
+.under-card-bw {
+  background:#000;
+  padding:12px 25px;
+  border-radius:8px;
+  margin:20px auto;
+  display:inline-block;
+  border:2px solid #fff;
+  font-weight:600;
+  cursor:default;
+}
+.under-card-bw:hover { background:#fff; }
+.under-card-bw span { color:#fff; }
+.under-card-bw:hover span { color:#000; }
+
+/* SEPARATOR LINE */
+.separator { width:90%; margin:20px auto; border-bottom:1px solid #fff; }
 
 /* FOOTER */
 footer{background:#000;padding:20px;text-align:center;font-size:0.9rem;color:#ccc;}
@@ -71,10 +95,10 @@ footer a:hover{text-decoration:underline;}
 
 /* RESPONSIVE */
 @media(max-width:600px){
-  .section-title{font-size:1.5rem;}
+  .section-title{font-size:1.7rem;}
   .section-subtitle{font-size:1.2rem;}
   .nav-btn{font-size:0.8rem;padding:5px 8px;}
-  .logo{font-size:2rem;}
+  .logo{font-size:2.2rem;}
   .input-icon-wrapper img{width:18px;height:18px;}
 }
 </style>
@@ -94,6 +118,7 @@ footer a:hover{text-decoration:underline;}
     <a class="nav-btn" href="/submission/">Submission</a>
   </nav>
 </header>
+
 <!-- INTRO -->
 <section id="intro" class="visible">
   <h2 class="section-title">Submit Your Track</h2>
@@ -118,11 +143,13 @@ footer a:hover{text-decoration:underline;}
   </div>
 </section>
 
+<div class="separator"></div>
+
 <!-- PAID SUBMISSION -->
 <section id="paid-submission" class="visible">
   <h2 class="section-title">Paid Submission for Wider Reach</h2>
   <p class="section-text">Promote your track with TribleTunes! Your lyric video will be boosted via ads, reaching more listeners and growing your audience. Paid submission includes:</p>
-  <ul style="text-align:left; max-width:500px; margin:auto; margin-bottom:20px;">
+  <ul style="text-align:left; max-width:500px; margin:auto; margin-bottom:10px;">
     <li>Priority creation of lyric video</li>
     <li>Promotion through YouTube & Ads</li>
     <li>Feature in TribleTunes playlists</li>
@@ -135,51 +162,17 @@ footer a:hover{text-decoration:underline;}
   </div>
 </section>
 
-<!-- RELEASE SUBMISSION UNDER CONSTRUCTION -->
-<section id="release-submission" class="visible" style="position:relative; padding:80px 20px; text-align:center; max-width:1000px; margin:auto;">
-  <h2 class="section-title" style="font-family:'Dancing Script',cursive; font-size:2.2rem; margin-bottom:15px;">Official Track Release</h2>
-  <p class="section-text" style="font-size:1.1rem; color:#ddd; margin-bottom:30px;">
-    Submitting your track for official release is not available yet. We are working hard to bring this feature soon!
-  </p>
+<div class="separator"></div>
 
-  <!-- Under Construction Card -->
-  <div style="
-    background: linear-gradient(135deg, #ff6a00, #ffcc00);
-    color:#000;
-    padding:40px 20px;
-    border-radius:15px;
-    font-size:1.2rem;
-    font-weight:600;
-    display:inline-block;
-    position:relative;
-    box-shadow:0 10px 25px rgba(0,0,0,0.5);
-    overflow:hidden;
-    cursor:default;
-    animation: glow 2s ease-in-out infinite alternate;
-  ">
-    ⚠️ UNDER CONSTRUCTION ⚠️
-    <div style="
-      position:absolute;
-      top:0; left:0; width:100%; height:100%;
-      background: repeating-linear-gradient(
-        45deg,
-        rgba(255,255,255,0.1),
-        rgba(255,255,255,0.1) 10px,
-        rgba(0,0,0,0) 10px,
-        rgba(0,0,0,0) 20px
-      );
-      pointer-events:none;
-    "></div>
-  </div>
+<!-- RELEASE SUBMISSION UNDER CONSTRUCTION -->
+<section id="release-submission" class="visible">
+  <h2 class="section-title">Official Track Release</h2>
+  <p class="section-text">Submitting your track for official release is not available yet. We are working hard to bring this feature soon!</p>
+  <div class="under-card-bw"><span>(Under Development)</span></div>
 </section>
 
-<style>
-@keyframes glow {
-  0% { box-shadow: 0 0 15px rgba(255,204,0,0.6), 0 0 30px rgba(255,102,0,0.4); }
-  50% { box-shadow: 0 0 25px rgba(255,204,0,0.8), 0 0 50px rgba(255,102,0,0.6); }
-  100% { box-shadow: 0 0 15px rgba(255,204,0,0.6), 0 0 30px rgba(255,102,0,0.4); }
-}
-</style>
+<div class="separator"></div>
+
 <!-- FOOTER -->
 <footer>
   <p>&copy; 2025 TribleTunes. All rights reserved.</p>
@@ -193,3 +186,6 @@ footer a:hover{text-decoration:underline;}
     <a href="mailto:contact@tribletunes.com">Email</a>
   </p>
 </footer>
+
+</body>
+</html>
